samples/_failures_safe/1761506590_c34167_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f0f8881.c:137:5: error: expected expression at end of input
  137 |     {STATE_PROCESSING,
      |     ^
